Create feature tu delete a project
